--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,23 @@ PyPDF2>=3.0.1
 python-docx>=0.8.11
 pandas>=1.5.0
 
-# Vector Database and Embeddings
-chromadb>=0.4.15
+# Vector Database Options
+# Option 1: FAISS (Facebook AI Similarity Search) - Works on all systems
+faiss-cpu>=1.7.4
+
+# Option 2: ChromaDB (uncomment if your system supports SQLite 3.35+)
+# chromadb>=0.4.15
+
+# Embeddings and ML
 sentence-transformers>=2.2.2
 
 # Natural Language Processing
 nltk>=3.8.1
 
+# Numerical computing
+numpy>=1.21.0
+
 # Additional Dependencies (automatically installed with above packages)
-# numpy>=1.21.0  # Required by sentence-transformers
 # torch>=1.9.0   # Required by sentence-transformers  
 # transformers>=4.21.0  # Required by sentence-transformers
 # scikit-learn>=1.0.0   # Required by sentence-transformers
