--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,25 @@
-# RAG System Requirements
-# Python version: 3.8-3.11 (recommended: 3.9-3.10)
-
-# Core Framework
+# Core Streamlit framework
 streamlit>=1.28.0
 
-# Document Processing
+# PDF processing
 PyPDF2>=3.0.1
-python-docx>=0.8.11
-pandas>=1.5.0
-
-# Vector Database - FAISS (guaranteed to work)
-faiss-cpu>=1.7.4
 
 # Machine Learning and Embeddings
 sentence-transformers>=2.2.2
-numpy>=1.21.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
 
-# Natural Language Processing
-nltk>=3.8.1
-
-# System utilities
-pathlib2>=2.3.7; python_version < "3.4"
-typing-extensions>=4.0.0
-
-# Optional: ChromaDB (uncomment if you want to try it and have SQLite 3.35+)
-# chromadb>=0.4.15
-
-# Optional: OpenAI API (for better answer generation)
-# openai>=1.0.0
-
-# Note: The following are automatically installed with sentence-transformers:
-# - torch>=1.9.0
-# - transformers>=4.21.0
-# - scikit-learn>=1.0.0
-# - scipy>=1.7.0# Python RAG System Requirements
-# Minimum Python version: 3.8+
-# Recommended Python version: 3.9-3.11
-
-# Core Streamlit Framework
-streamlit>=1.28.0
-
-# Document Processing
-PyPDF2>=3.0.1
-python-docx>=0.8.11
-pandas>=1.5.0
-
-# Vector Database Options
-# Option 1: FAISS (Facebook AI Similarity Search) - Works on all systems
+# Vector Database
 faiss-cpu>=1.7.4
 
-# Option 2: ChromaDB - OPTIONAL (uncomment if your system supports SQLite 3.35+)
-# If you want to try ChromaDB, uncomment the line below:
-# chromadb>=0.4.15
+# Google Gemini AI
+google-generativeai>=0.3.0
 
-# Embeddings and ML
-sentence-transformers>=2.2.2
+# Additional dependencies that might be needed
+torch>=2.0.0
+transformers>=4.21.0
+huggingface-hub>=0.16.0
 
-# Natural Language Processing
-nltk>=3.8.1
-
-# Numerical computing
-numpy>=1.21.0
-
-# Additional Dependencies (automatically installed with above packages)
-# torch>=1.9.0   # Required by sentence-transformers  
-# transformers>=4.21.0  # Required by sentence-transformers
-# scikit-learn>=1.0.0   # Required by sentence-transformers
-# scipy>=1.7.0   # Required by sentence-transformers
-
-# Optional: OpenAI API (if you want to use GPT models instead of local generation)
-# openai>=1.0.0
-
-# System Dependencies
-pathlib2>=2.3.7; python_version < "3.4"
-typing-extensions>=4.0.0
+# Utility libraries
+pandas>=2.0.0
+requests>=2.31.0
