--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ faiss-cpu>=1.7.4
 # Google Gemini AI
 google-generativeai>=0.3.0
 
-# Additional dependencies that might be needed
+# Real LLaMA/Transformer models
 torch>=2.0.0
 transformers>=4.21.0
 huggingface-hub>=0.16.0
@@ -23,3 +23,9 @@ huggingface-hub>=0.16.0
 # Utility libraries
 pandas>=2.0.0
 requests>=2.31.0
+
+# For file hashing and persistence
+hashlib
+pickle
+json
+tempfile
